--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -633,36 +633,36 @@
     <string name="title_power_optimizer">Risparmio batteria</string>
     <string name="summary_power_optimizer">Riduci le prestazioni del tuo dispositivo quando la batteria è scarica</string>
     <string name="title_data_flow">"Imposta un avviso per l'utilizzo dei dati"</string>
-    <string name="summary_data_flow">"Avoid going over your carrier plan's monthly data limit"</string>
-    <string name="title_telecom_operator">"Use carrier's accounting"</string>
-    <string name="summary_telecom_operator">Get your monthly data usage stats from your carrier</string>
-    <string name="title_flow_verify">Compare accounting</string>
-    <string name="summary_flow_verify">"Haven't synced carrier's data usage stats in %d days"</string>
-    <string name="title_saving_switch">Data saver</string>
-    <string name="summary_saving_switch">Restrict apps from using your mobile data connection to transfer data</string>
-    <string name="title_flow_notification">Data usage report</string>
-    <string name="summary_flow_notification">Show your monthly data usage stats in the notification shade</string>
-    <string name="title_flow_purchase">Time to top up</string>
-    <string name="summary_flow_purchase_left">You only have %sMB of mobile data remaining this month</string>
-    <string name="summary_flow_purchase_beyond">"You've exceeded your carrier plan's monthly data limit by %sMB"</string>
-    <string name="title_show_notification">Notification shade controls</string>
-    <string name="summary_show_notification">"Pin Security Center's controls to the notification shade"</string>
-    <string name="title_garbage_lib">Automatic updates</string>
-    <string name="summary_garbage_lib">Use the latest definitions to remove spyware, adware, and other unwanted garbage</string>
-    <string name="title_permission_root">Root access warning</string>
-    <string name="summary_permission_root">Your device and personal data are more vulnerable to attack from apps that have root access</string>
-    <string name="title_app_update">Updates available</string>
-    <string name="title_miui_update">Update available</string>
-    <string name="summary_miui_update">Update available for %s.</string>
+    <string name="summary_data_flow">Evita di superare il limite mensile previsto dal tuo piano</string>
+    <string name="title_telecom_operator">Utilizza il conteggio del gestore</string>
+    <string name="summary_telecom_operator">Ottieni le statistiche mensili dal tuo operatore</string>
+    <string name="title_flow_verify">Confronto</string>
+    <string name="summary_flow_verify">Non hai sincronizzato le statistiche dell'operatore da %d giorni</string>
+    <string name="title_saving_switch">Risparmio dati</string>
+    <string name="summary_saving_switch">Impedisci alle applicazioni di utilizzare la connessione dati mobile</string>
+    <string name="title_flow_notification">Rapporto utilizzo dati</string>
+    <string name="summary_flow_notification">Mostra le statistiche mensili nel pannello di notifica</string>
+    <string name="title_flow_purchase">"E' il momento di ricaricare"</string>
+    <string name="summary_flow_purchase_left">Ti sono rimasti %s MB di traffico questo mese</string>
+    <string name="summary_flow_purchase_beyond">Hai superato il tuo traffico mensile di %s MB"</string>
+    <string name="title_show_notification">Controlli pannello di notifica</string>
+    <string name="summary_show_notification">Inserisci i controlli del Centro di Sicurezza nel pannello delle notifiche</string>
+    <string name="title_garbage_lib">Aggiornamenti automatici</string>
+    <string name="summary_garbage_lib">Utilizza le ultime definizioni per spyware, adware ed altri elementi indesiderati</string>
+    <string name="title_permission_root">Avviso accesso root</string>
+    <string name="summary_permission_root">Il tuo dispositivo ed i dati personali contenuti in esso sono più vulnerabili ad attacchi provenienti da applicazioni con permessi root</string>
+    <string name="title_app_update">Aggiornamento disponibile</string>
+    <string name="title_miui_update">Aggiornamento disponibile</string>
+    <string name="summary_miui_update">Aggiornamento disponibile per %s.</string>
     <string name="pref_title_open_optimizer_cloud_scan">Usa il motore di Pulizia online</string>
     <string name="pref_summary_open_optimizer_cloud_scan">Carica e confronta nomi di file sconosciuti con il database online</string>
-    <string name="title_virus_cloudscan">Use online virus definitions</string>
-    <string name="summary_virus_cloudscan">Upload app names and details and scan using online virus definitions</string>
-    <string name="title_cleaner_cloudscan">Use online Cleaner engine</string>
-    <string name="summary_cleaner_cloudscan">Upload and compare unknown folder names with online definitions</string>
-    <string name="toast_flow_notification">Turned on data usage notifications</string>
-    <string name="toast_show_notification">Pinned to notification shade</string>
-    <string name="toast_virus_cloudscan">Virus scan will use online definitions</string>
-    <string name="toast_cleaner_cloudscan">Cleaner will use online definitions</string>
-    <string name="toast_garbage_lib">Turned on automatic updates for Cleaner</string>
+    <string name="title_virus_cloudscan">Utilizza definizioni virus online</string>
+    <string name="summary_virus_cloudscan">Carica nomi app e dettagli e controlla utilizzando le definizioni online</string>
+    <string name="title_cleaner_cloudscan">Utilizza motore di pulizia online</string>
+    <string name="summary_cleaner_cloudscan">Carica e confronta i nomi sconosciuti delle carte con il database online</string>
+    <string name="toast_flow_notification">Notifiche utilizzo dati attivate</string>
+    <string name="toast_show_notification">Inserto nel pannello di notifica</string>
+    <string name="toast_virus_cloudscan">La scansione virus utilizzerà il database online</string>
+    <string name="toast_cleaner_cloudscan">Lo Strumento di Pulizia utilizzerà il database online</string>
+    <string name="toast_garbage_lib">Aggiornamenti automatici attivati per lo Strumento di Pulizia</string>
 </resources>
