--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -242,7 +242,7 @@
     <string name="select_album">Seleziona album</string>
     <string name="select_lyric">Seleziona testi</string>
     <string name="search_album">Cerca album online</string>
-    <string name="search_lyric">CErca testi online</string>
+    <string name="search_lyric">Cerca testi online</string>
     <string name="select_local_album">Seleziona album locale</string>
     <string name="select_local_lyric">Seleziona testi in locale</string>
     <string name="please_search_or_select">Cerca e seleziona</string>
