--- a/Italian/main/Cit.apk/res/values-it/strings.xml
+++ b/Italian/main/Cit.apk/res/values-it/strings.xml
@@ -142,6 +142,16 @@ Hold the phone as if you are making a call, Speak to main microphone, you should
     <string name="cit_gps_check_summary">The corresponding GPS info should be displayed below.</string>
     <string name="cit_fm_check_summary">"This will test the device's FM function."</string>
     <string name="cit_power_check_summary">The amount of battery charge should be expressed as a percentage below.</string>
+    <string name="cit_audio_cali_title">Speaker PA Calibration Test</string>
+    <string name="cit_audio_cali_summary">Calibrate Speaker PA</string>
+    <string name="cit_audio_cali_playing">Press button to do calibration</string>
+    <string name="cit_audio_cali_file_existed">Music file do not exist,can not do calibration!</string>
+    <string name="cit_audio_cali_done">Calibration Done!</string>
+    <string name="cit_audio_cali_valueR">Impedance:</string>
+    <string name="cit_audio_cali_valueT">tCoef:</string>
+    <string name="cit_audio_cali_valueF0">F0:</string>
+    <string name="cit_audio_cali_failed">Calibration Failed, please Retry!</string>
+    <string name="cit_aud_spkcal">Calibrate</string>
     <string name="cit_OTG_plugin_check_summary">When OTG device is connected, the text \"USB OTG device detected\" should be displayed below.</string>
     <string name="cit_OTG_plugout_check_summary">When OTG device is removed, the text \"USB OTG device removed\" should be displayed below.</string>
     <string name="cit_vibrator_short">Short vibration</string>
@@ -226,6 +236,8 @@ Touch the screen to start GPS…"</string>
     <string name="cit_gps_satellite_count">Satellite count: %d</string>
     <string name="cit_gps_satellite_prn">Prn: %s</string>
     <string name="cit_gps_satellite_snr">Snr: %s</string>
+    <string name="cit_gps_first_fix_time">Fixed_time: %s</string>
+    <string name="cit_gps_location">Location: %s</string>
     <string name="cit_lcdlight_brightness">Backlight</string>
     <string name="cit_lcdlight_brightness_max">MAX</string>
     <string name="cit_lcdlight_brightness_min">MIN</string>
@@ -282,11 +294,11 @@ Touch the screen to start GPS…"</string>
     <string name="cit_tool_bluetooth_off">Disable Bluetooth</string>
     <string name="cit_tool_wifi">WLAN test tool</string>
     <string name="cit_tool_wifi_rx_chan">Rx: Channel</string>
-    <string name="cit_tool_wifi_tx_bg">Tx:B/G</string>
+    <string name="cit_tool_wifi_tx_bg">Tx: a/b/g</string>
     <string name="cit_tool_wifi_tx_bg_chan">channel:</string>
     <string name="cit_tool_wifi_tx_bg_txpr">txpower:</string>
     <string name="cit_tool_wifi_tx_bg_txrt">datarate:</string>
-    <string name="cit_tool_wifi_tx_n">Tx:N</string>
+    <string name="cit_tool_wifi_tx_n">Tx: n</string>
     <string name="cit_tool_wifi_tx_ac">Tx: ac</string>
     <string name="cit_tool_wifi_tx_st">Tx: ST</string>
     <string name="cit_tool_wifi_tx_n_chan">channel:</string>
@@ -296,7 +308,7 @@ Touch the screen to start GPS…"</string>
     <string name="cit_tool_wifi_chain_1">1</string>
     <string name="cit_tool_wifi_chain_2">2</string>
     <string name="cit_tool_wifi_chain_1_2">1+2</string>
-    <string name="cit_tool_wifi_rx_ap">Rx:AP</string>
+    <string name="cit_tool_wifi_rx_ap">Rx: AP</string>
     <string name="cit_tool_wifi_rx_exit">Rx:exit</string>
     <string name="cit_tool_wifi_rx_run">Avvia</string>
     <string name="cit_tool_wifi_rx_stop">Interrompi</string>
