--- a/Italian/main/AntiSpam.apk/res/values-it/strings.xml
+++ b/Italian/main/AntiSpam.apk/res/values-it/strings.xml
@@ -15,7 +15,7 @@
     <string name="bl_no_block_sms">Tutti i messaggi bloccati verranno registrati qui</string>
     <string name="bl_no_blacklist">Blacklist vuota</string>
     <string name="wl_no_whitelist">Nessun numero consentito</string>
-    <string name="log_count">(%d)</string>
+    <string name="APKTOOL_DUMMY_0130">false</string>
     <string name="tab_block_log_unKnowNumber">Numero sconosciuto</string>
     <string name="user_define_title">Personalizza</string>
     <string name="blacklist_prefix_add_hint">Aggiungi alla lista blocco tutti numeri con prefisso</string>
